# simplified_bank_system

./: Account.h  BankingSystem.cpp  BankingSystem.h  CMakeLists.txt  ErrorHandling.cpp  ErrorHandling.h  README.md  include.h  main.cpp
accounts/: Account.cpp  Account.h
banking_system/: BankingSystem.cpp  BankingSystem.h
main/: include.h  main.cpp
main/operations/: OperationsHandling.cpp  OperationsHandling.h
messages/errorMessages/: ErrorHandling.cpp  ErrorHandling.h
messages/successfulMessages/: SuccessfulMessages.cpp  SuccessfulMessages.h
